# rust_avr_snake_game

./: Cargo.toml  avr-unknown-gnu-atmega328.json  diagram.json  me.toml  wokwi.toml
.cargo/: config.toml
src/: main.rs
src/display/: i2c.rs  mod.rs  ssd1306.rs
